trying to fix scroll on iOS

--- a/style.css
+++ b/style.css
@@ -31,8 +31,12 @@ html {
 }
 
 body {
-	background-image:-webkit-gradient(linear, 56% 37%, 0% 100%, from(#2E5D9F), to(#F2EDD7), color-stop(.8,#D7C49E));
+	background-image: -webkit-gradient(linear, 56% 37%, 0% 100%, from(#2E5D9F), to(#F2EDD7), color-stop(.8,#D7C49E));
 	height: 100vh;
+}
+
+html,
+body {
 	overflow: hidden;
 }
 
